// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom|Method for rendering Vue JSX 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  MyButton rendered with JSX!
</button>
`;

exports[`Storyshots Custom|Method for rendering Vue Pre Registered Component 1`] = `
<p>
  <em>
    This component was pre-registered in .storybook/config.js
  </em>
  <br />
   
  <button
    class="button"
    style="color: rgb(66, 185, 131); border-color: #42b983;"
  >
    MyButton rendered in a template!
  </button>
</p>
`;

exports[`Storyshots Custom|Method for rendering Vue Render 1`] = `
<div>
  renders a div with some text in it..
</div>
`;

exports[`Storyshots Custom|Method for rendering Vue Render Component 1`] = `
<button
  class="button"
  style="color: pink; border-color: pink;"
>
  renders component: MyButton!
</button>
`;

exports[`Storyshots Custom|Method for rendering Vue Template 1`] = `
<div>
  <h1>
    A template
  </h1>
   
  <p>
    rendered in vue in storybook
  </p>
</div>
`;

exports[`Storyshots Custom|Method for rendering Vue Template Component 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  MyButton rendered in a template!
</button>
`;

exports[`Storyshots Custom|Method for rendering Vue Template Methods 1`] = `
<p>
  <em>
    Clicking the button will navigate to another story using the 'addon-links'
  </em>
  <br />
   
  <button
    class="button rounded"
    style="color: rgb(66, 185, 131); border-color: #42b983;"
  >
    MyButton rendered in a template + props & methods!
  </button>
</p>
`;

exports[`Storyshots Custom|Method for rendering Vue Vuex Actions 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  with vuex: 0!
</button>
`;

exports[`Storyshots Custom|Method for rendering Vue Whatever You Want 1`] = `
<button
  class="button"
  style="color: rgb(66, 185, 131); border-color: #42b983;"
>
  with awesomeness: 0!
</button>
`;
